fixed animation on mobile

--- a/main.css
+++ b/main.css
@@ -129,6 +129,10 @@ h4 > i {
   #logos > a > i:hover {
     max-width: 100px;
   }
+
+  #background-tiles > div:hover {
+    animation: none;
+  }
 }
 
 @keyframes bounce{
